      (Andrew Bennetts, #246233)

    * Fixed ``bzr st -r branch:PATH_TO_BRANCH`` where the other branch
      is in a different repository than the current one.
      (Lukáš Lalinský, #144421)

    * Make the first line of the manpage preamble a comment again.
      (David Futcher, #242106)

  DOCUMENTATION:

    * Explain revision/range identifiers. (Daniel Clemente)

  API CHANGES:

  TESTING:

    * ``bzrlib.tests.repository_implementations`` has been renamed to
      ``bzrlib.tests.per_repository`` so that we have a common structure
      (and it is shorter). (John Arbash Meinel, #239343)

    * ``LocalTransport.abspath()`` now returns a drive letter if the
      transport has one, fixing numerous tests on Windows.
      (Mark Hammond)

    * The full test suite is passing again on OSX.
      (Guillermo Gonzalez, Vincent Ladeuil)

    * PreviewTree is now tested via intertree_implementations.
      (Aaron Bentley)

  INTERNALS:

    * A new hook, ``Branch.open``, has been added, which is called when
      branch objects are opened. (Robert Collins)

    * ``bzrlib.osutils._walkdirs_utf8`` has been refactored into common
      tree walking, and modular directory listing code to aid future
      performance optimisations and refactoring. (Robert Collins)

    * New method ``RevisionSpec.as_tree`` for representing the revision
      specifier as a revision tree object. (Lukáš Lalinský)

    * New win32utils.get_local_appdata_location() provides access to a local
      directory for storing data.  (Mark Hammond)


bzr 1.7 2008-09-23
------------------

This release includes many bug fixes and a few performance and feature
improvements.  ``bzr rm`` will now scan for missing files and remove them,
like how ``bzr add`` scans for unknown files and adds them. A bit more
polish has been applied to the stacking code. The b-tree indexing code has
been brought in, with an eye on using it in a future repository format.