@@ -2110,7 +2110,7 @@ class RepositoryFormatKnitPack5(RepositoryFormatPack):
     index_class = GraphIndex
 
     def _get_matching_bzrdir(self):
-        return bzrdir.format_registry.make_bzrdir('development1')
+        return bzrdir.format_registry.make_bzrdir('1.6')
 
     def _ignore_setting_bzrdir(self, format):
         pass
@@ -2196,7 +2196,7 @@ class RepositoryFormatKnitPack5RichRootBroken(RepositoryFormatPack):
 
     def _get_matching_bzrdir(self):
         return bzrdir.format_registry.make_bzrdir(
-            'development1-subtree')
+            '1.6.1-rich-root')
 
     def _ignore_setting_bzrdir(self, format):
         pass
@@ -2215,91 +2215,6 @@ class RepositoryFormatKnitPack5RichRootBroken(RepositoryFormatPack):
     def get_format_description(self):
         return ("Packs 5 rich-root (adds stacking support, requires bzr 1.6)"
                 " (deprecated)")
-
-
-class RepositoryFormatPackDevelopment1(RepositoryFormatPack):
-    """A no-subtrees development repository.
-
-    This format should be retained until the second release after bzr 1.5.
-
-    Supports external lookups, which results in non-truncated ghosts after
-    reconcile compared to pack-0.92 formats.
-    """
-
-    repository_class = KnitPackRepository
-    _commit_builder_class = PackCommitBuilder
-    _serializer = xml5.serializer_v5
-    supports_external_lookups = True
-    # What index classes to use
-    index_builder_class = InMemoryGraphIndex
-    index_class = GraphIndex
-
-    def _get_matching_bzrdir(self):
-        return bzrdir.format_registry.make_bzrdir('development1')
-
-    def _ignore_setting_bzrdir(self, format):
-        pass
-
-    _matchingbzrdir = property(_get_matching_bzrdir, _ignore_setting_bzrdir)
-
-    def get_format_string(self):
-        """See RepositoryFormat.get_format_string()."""
-        return "Bazaar development format 1 (needs bzr.dev from before 1.6)\n"
-
-    def get_format_description(self):
-        """See RepositoryFormat.get_format_description()."""
-        return ("Development repository format, currently the same as "
-            "pack-0.92 with external reference support.\n")
-
-    def check_conversion_target(self, target_format):
-        pass
-
-
-class RepositoryFormatPackDevelopment1Subtree(RepositoryFormatPack):
-    """A subtrees development repository.
-
-    This format should be retained until the second release after bzr 1.5.
-
-    Supports external lookups, which results in non-truncated ghosts after
-    reconcile compared to pack-0.92 formats.
-    """
-
-    repository_class = KnitPackRepository
-    _commit_builder_class = PackRootCommitBuilder
-    rich_root_data = True
-    supports_tree_reference = True
-    _serializer = xml7.serializer_v7
-    supports_external_lookups = True
-    # What index classes to use
-    index_builder_class = InMemoryGraphIndex
-    index_class = GraphIndex
-
-    def _get_matching_bzrdir(self):
-        return bzrdir.format_registry.make_bzrdir(
-            'development1-subtree')
-
-    def _ignore_setting_bzrdir(self, format):
-        pass
-
-    _matchingbzrdir = property(_get_matching_bzrdir, _ignore_setting_bzrdir)
-
-    def check_conversion_target(self, target_format):
-        if not target_format.rich_root_data:
-            raise errors.BadConversionTarget(
-                'Does not support rich root data.', target_format)
-        if not getattr(target_format, 'supports_tree_reference', False):
-            raise errors.BadConversionTarget(
-                'Does not support nested trees', target_format)
-            
-    def get_format_string(self):
-        """See RepositoryFormat.get_format_string()."""
-        return ("Bazaar development format 1 with subtree support "
-            "(needs bzr.dev from before 1.6)\n")
-
-    def get_format_description(self):
-        """See RepositoryFormat.get_format_description()."""
-        return ("Development repository format, currently the same as "
-            "pack-0.92-subtree with external reference support.\n")
 
 
 class RepositoryFormatPackDevelopment2(RepositoryFormatPack):
@@ -2333,7 +2248,7 @@ class RepositoryFormatPackDevelopment2(RepositoryFormatPack):
     def get_format_description(self):
         """See RepositoryFormat.get_format_description()."""
         return ("Development repository format, currently the same as "
-            "pack-1.6.1 with B+Trees.\n")
+            "1.6.1 with B+Trees.\n")
 
     def check_conversion_target(self, target_format):
         pass
@@ -2344,7 +2259,7 @@ class RepositoryFormatPackDevelopment2Subtree(RepositoryFormatPack):
 
     This format should be retained until the second release after bzr 1.7.
 
-    pack-1.6.1-subtree with B+Tree indices.
+    1.6.1-subtree[as it might have been] with B+Tree indices.
     """
 
     repository_class = KnitPackRepository
@@ -2382,4 +2297,4 @@ class RepositoryFormatPackDevelopment2Subtree(RepositoryFormatPack):
     def get_format_description(self):
         """See RepositoryFormat.get_format_description()."""
         return ("Development repository format, currently the same as "
-            "pack-1.6.1-subtree with B+Tree indices.\n")
+            "1.6.1-subtree with B+Tree indices.\n")
